--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.2",
   "description": "Lets control the MegaD-2561 over ethernet (http://www.ab-log.ru/smart-house/ethernet/megad-2561) from ioBroker",
   "author": {
-    "name": "bluefox",
-    "email": "dogafox@gmail.com"
+    "name": "ausHaus",
+    "email": "teshaus@gmail.com"
   },
   "homepage": "https://github.com/ausHaus/ioBroker.megadd",
   "keywords": [
