--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-jscs": "^3.0.1",
     "grunt-http": "^2.2.0",
-    "mocha": "^3.5.3",
+    "mocha": "^6.0.2",
     "chai": "^4.1.2",
-    "keypress": "*"
+    "keypress": "*",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "bugs": {
     "url": "https://github.com/ausHaus/ioBroker.megadd/issues"
   },
   "main": "main.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha"
+    "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "license": "MIT"
 }
