--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 os:
   - linux
   - osx
+  - windows
 language: node_js
 node_js:
-  - '0.10'
-  - '0.12'
-  - '4'
   - '6'
-  - '7'
+  - '8'
+  - '10'
 before_script:
-  - npm install winston@2.3.0
+  - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
+  - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
+  - npm -v
+  - npm install winston@3.2.1
   - 'npm install https://github.com/ioBroker/ioBroker.js-controller/tarball/master --production'
