--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "type": "git",
     "url": "https://github.com/ausHaus/ioBroker.megadd"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@iobroker/adapter-core": "^1.0.3"
+  },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-replace": "^1.0.1",
@@ -24,8 +26,7 @@
     "grunt-http": "^2.2.0",
     "mocha": "^6.0.2",
     "chai": "^4.1.2",
-    "keypress": "*",
-    "@iobroker/adapter-core": "^1.0.3"
+    "keypress": "*"
   },
   "bugs": {
     "url": "https://github.com/ausHaus/ioBroker.megadd/issues"
